# jp-quant-playground

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
note/: __init__.py  indicators.md  ncav_analysis.py
note/data/: data_j - Sheet1.tsv
note/libs/: csv_exporter.py  data_fetcher.py  indicators.py
note/scripts/: export_stock_data.py
specs/001-yfinance-data-exporter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-yfinance-data-exporter/checklists/: requirements.md
specs/001-yfinance-data-exporter/contracts/: cli-interface.md
tests/note/: test_cli_integration.py  test_csv_exporter.py  test_data_fetcher.py
