[project]
name = "jp-quant-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.17.8",
    "plotly>=6.4.0",
    "polars>=1.35.2",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "ruff>=0.14.5",
]
