[project]
name = "jp-quant-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.1",
    "marimo>=0.17.8",
    "plotly>=6.4.0",
    "polars>=1.35.2",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "ruff>=0.14.5",
    "types-tqdm>=4.67.0.20250809",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "fire.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yfinance.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true
